# src/app/api-services-v2/model/preferenceType.ts
@@ -1,0 +1,16 @@
+/**
+ * Bestellsystem API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export const PreferenceType = {
+    ORDER_PRESETS: 'ORDER_PRESETS'
+} as const;
+export type PreferenceType = typeof PreferenceType[keyof typeof PreferenceType];
+
